--- a/src/Baseball_frontend/components/menubar/menubar.scss
+++ b/src/Baseball_frontend/components/menubar/menubar.scss
@@ -17,8 +17,7 @@ Old Guy Programmer
   font-size: 4rem;
   text-decoration: none;
   color: $text-color;
-}
-
-.dropdown {
-  font-size: 3rem;
+  a {
+    font-size: 3rem;
+  }
 }
