Screen formatting: card colors, text size and colors, card placements, Player Input Box.

--- a/src/Baseball_frontend/components/add-player/add-player.scss
+++ b/src/Baseball_frontend/components/add-player/add-player.scss
@@ -19,7 +19,13 @@ form {
     font-size: 3rem;
   }
   input {
+    font-size: 3rem;
     height: 50px;
     width: 300px;
+  }
+  .btn {
+    font-size: 2.5rem;
+    background: $card-background-color;
+    color: $card-text-color;
   }
 }
