--- a/src/Baseball_frontend/components/card/card.scss
+++ b/src/Baseball_frontend/components/card/card.scss
@@ -19,6 +19,12 @@ Old Guy Programmer
   margin: 10px;
   border-radius: 10%;
   font-family: Bosox-full;
-  font-size: 30px;
+  font-size: 1rem;
   justify-content: center;
+  h2 {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 3rem;
+  }
 }
