--- a/src/Baseball_frontend/src/globals.scss
+++ b/src/Baseball_frontend/src/globals.scss
@@ -8,5 +8,5 @@ Old Guy Programmer
 */
 
 $text-color: rgb(51, 50, 50);
-$card-text-color: white;
+$card-text-color: rgba(226, 195, 195, 0.801);
 $card-background-color: rgb(51, 50, 50);
