--- a/src/Baseball_frontend/components/forms/forms.scss
+++ b/src/Baseball_frontend/components/forms/forms.scss
@@ -1,7 +1,7 @@
 /*
 Baseball Roster and Team Organizer
 
-Input Form Styles
+Input Styles
 
 Old Guy Programmer
 2025
@@ -18,14 +18,15 @@ form {
   label {
     font-size: 3rem;
   }
-  input {
-    font-size: 3rem;
-    height: 50px;
-    width: 300px;
-  }
   .btn {
     font-size: 2.5rem;
     background: $card-background-color;
     color: $card-text-color;
+  }
+
+  input {
+    font-size: 3rem;
+    height: 50px;
+    width: 300px;
   }
 }
