--- a/src/Baseball_frontend/components/buttons/buttons.scss
+++ b/src/Baseball_frontend/components/buttons/buttons.scss
@@ -9,8 +9,8 @@ Old Guy Programmer
 
 @import "../../src/globals.scss";
 
-.button {
-  display: inline-block;
+.NavButton {
+  display: inline-grid;
   color: white;
   background-color: rgb(51, 50, 50);
   padding: 10px;
@@ -21,5 +21,7 @@ Old Guy Programmer
   font-family: Bosox-full;
   font-size: 3rem;
   cursor: pointer;
+  text-decoration: none;
   justify-content: center;
+  align-items: center;
 }
