--- a/src/Baseball_frontend/components/forms/forms.scss
+++ b/src/Baseball_frontend/components/forms/forms.scss
@@ -14,8 +14,8 @@ Old Guy Programmer
 }
 
 form {
-  display: inline-block;
-  background-color: lightblue;
+  display: inline-grid;
+  background-color: lightgray;
   font-family: Bosox-full;
   width: 50vw;
 
