Unable to specify .CSV file for bulk upload. Converted to copy-paste.

--- a/src/Baseball_frontend/components/buttons/buttons.scss
+++ b/src/Baseball_frontend/components/buttons/buttons.scss
@@ -12,7 +12,7 @@ Old Guy Programmer
 .NavButton {
   display: inline-grid;
   color: white;
-  background-color: rgb(51, 50, 50);
+  background-color: $card-background-color;
   padding: 10px;
   margin: 10px;
   width: 125px;
