--- a/src/Baseball_frontend/components/card/card.scss
+++ b/src/Baseball_frontend/components/card/card.scss
@@ -13,7 +13,7 @@ Old Guy Programmer
   display: inline-block;
   background-color: $card-background-color;
   color: $card-text-color;
-  border: 1px solid grey;
+  border: 5Spx solid $border-radius-color;
   border-radius: 5px;
   padding: 25px;
   margin: 10px;
@@ -26,5 +26,11 @@ Old Guy Programmer
   }
   h3 {
     font-size: 3rem;
+  }
+  .trashCan {
+    font-size: 2.5em;
+    :hover {
+      cursor: pointer;
+    }
   }
 }
