--- a/src/Baseball_frontend/src/globals.scss
+++ b/src/Baseball_frontend/src/globals.scss
@@ -10,6 +10,7 @@ Old Guy Programmer
 $text-color: rgb(51, 50, 50);
 $card-text-color: rgba(226, 195, 195, 0.801);
 $card-background-color: rgb(51, 50, 50);
+$border-radius-color: grey;
 
 @mixin responsive-font($responsive, $min, $max: false, $fallback: false) {
   $responsive-unitless: $responsive / ($responsive - $responsive + 1);
