--- a/src/Baseball_frontend/components/card/card.scss
+++ b/src/Baseball_frontend/components/card/card.scss
@@ -7,7 +7,7 @@ Old Guy Programmer
 2025
 */
 
-@import "../../src/globals.scss";
+@import "../styles/main.scss";
 
 .card-container {
   display: inline-block;
