--- a/src/Baseball_frontend/components/load-players/load-players.scss
+++ b/src/Baseball_frontend/components/load-players/load-players.scss
@@ -7,11 +7,23 @@ Old Guy Programmer
 2025
 */
 
-@import "../../src/globals.scss";
+@import "../styles/main.scss";
 
 .players-container {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   text-align: center;
   font-family: Bosox-full;
+}
+
+.help-container {
+  font-family: "Times New Roman", Times, serif;
+  text-align: left;
+  margin-left: 20px;
+  h1 {
+    font-size: 2em;
+  }
+  p li {
+    font-size: 1.5em;
+  }
 }
