--- a/src/Baseball_frontend/components/title/title.scss
+++ b/src/Baseball_frontend/components/title/title.scss
@@ -7,10 +7,9 @@ Old Guy Programmer
 2025
 */
 
-@import "../../src/globals.scss";
+@import "../styles/main.scss";
 
 .title-text {
   color: $text-color;
-  font-family: Bosox-full;
   font-size: 50rem;
 }
