--- a/src/Baseball_frontend/components/menubar/menubar.scss
+++ b/src/Baseball_frontend/components/menubar/menubar.scss
@@ -7,13 +7,12 @@ Old Guy Programmer
 2025
 */
 
-@import "../../src/globals.scss";
+@import "../styles/main.scss";
 
 .menubar {
   padding: 10px 10px;
   width: 100%;
   background-color: lightgray;
-  font-family: Bosox-full;
   font-size: 4rem;
   text-decoration: none;
   color: $text-color;
