--- a/src/Baseball_frontend/components/player-list/player-list.scss
+++ b/src/Baseball_frontend/components/player-list/player-list.scss
@@ -7,7 +7,7 @@ Old Guy Programmer
 2025
 */
 
-@import "../../src/globals.scss";
+@import "../styles/main.scss";
 
 .player-list {
   display: flex;
