--- a/src/Baseball_frontend/components/load-players/load-players.scss
+++ b/src/Baseball_frontend/components/load-players/load-players.scss
@@ -10,10 +10,7 @@ Old Guy Programmer
 @import "../styles/main.scss";
 
 .players-container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  text-align: center;
-  font-family: Bosox-full;
+  @include players-container;
 }
 
 .help-container {
